frame/support/test/tests/construct_runtime_ui/missing_module_instance.stderr
error: expected identifier
 --> $DIR/missing_module_instance.rs:9:20
  |
9 |         system: System::<>,
  |                          ^
